--- a/src/View/samplemessage/MessageAddPersonas.form
+++ b/src/View/samplemessage/MessageAddPersonas.form
@@ -195,6 +195,7 @@
     </Component>
     <Component class="com.toedter.calendar.JDateChooser" name="dpNacimiento">
       <Properties>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
         <Property name="dateFormatString" type="java.lang.String" value="yyyy-MM-dd"/>
       </Properties>
       <Constraints>
