--- a/src/View/Application/form/other/CodigosEstudiantes.form
+++ b/src/View/Application/form/other/CodigosEstudiantes.form
@@ -63,10 +63,10 @@
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="cbSearch" min="-2" pref="129" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                          <Component id="btnRecargar" min="-2" pref="60" max="-2" attributes="0"/>
+                          <Component id="cbSearch" min="-2" pref="135" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
+                          <Component id="btnRecargar" min="-2" pref="60" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                           <Component id="buttons1" min="-2" pref="60" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="btnDelete" min="-2" pref="60" max="-2" attributes="0"/>
@@ -93,7 +93,7 @@
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="Buscador" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="cbSearch" alignment="3" max="32767" attributes="0"/>
+                              <Component id="cbSearch" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -168,7 +168,7 @@
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnRecargarMouseClicked"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JComboBox" name="cbSearch">
+        <Component class="View.BotonesText.CustomComboBox" name="cbSearch">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="3">
@@ -177,13 +177,7 @@
                 <StringItem index="2" value="C&#xf3;digo"/>
               </StringArray>
             </Property>
-            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[94, 25]"/>
-            </Property>
           </Properties>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
